complete alpha version

--- a/templates/image-front.html
+++ b/templates/image-front.html
@@ -7,7 +7,7 @@
 Valualize Graphic
 </title>
 
-<base href="http://labs.jt-inc.net/graphic/">
+<base href="http://labs.jt-inc.net/imageViewer2/images/">
 
 <style type="text/css">
 
@@ -24,7 +24,7 @@ width: 100%;
 top: 10px;
 align: center;
 color: #000;
-font-size: 500%;
+font-size: 1000%;
 font-family: Helvetica;
 }
 
@@ -58,7 +58,7 @@ cursor:pointer;
 .preview img 
 {
 padding: 0px;
-width: 74%;
+width: 100%;
 margin-top: 0px;
 border: 1px solid #000;
 }
@@ -79,12 +79,14 @@ font-family: Helvetica;
 
 <div class="headline" align="center">
 
-<img id="headline" src="images/Brand Assets/facebook_cover.png" alt="Valualize Graphic"/>
+<img id="headline" src="Brand Assets/facebook_cover.png" alt="Valualize Graphic"/>
 <h2>Valualize Graphic</h2>
 
 </div>
 
 <div class="gallery" align="center" style="width:90%">
 
-<div id="thumbnails" class="thumbnails" style="float:left;width:25%">
+<div class="preview" id="main" align="center">
+
+<img id="preview" src=
 
