--- a/templates/index-last.html
+++ b/templates/index-last.html
@@ -35,6 +35,10 @@ document.getElementById("preview").style.marginTop="0px";
 
 <br/>
 
+<div id="copyright" align="center" style="width:100%">
+
+<p><small><b>Copyright 2014 <a href="http://graphic.valualize.com">Valualize Graphic</a></b></small></p>
+
 </div>
 
 </body>
