--- a/templates/head.html
+++ b/templates/head.html
@@ -123,6 +123,46 @@ document.getElementById("preview").style.marginTop="0px";
 
 </script>
 
+<script type="text/javascript" src="js/jquery.endless-scroll.js"></script>
+<script type="text/javascript" charset="utf-8">
+$(function() {
+		$(document).endlessScroll({
+bottomPixels: 500,
+fireDelay: 10,
+callback: function(i) {
+var last_img = $("table#images tr:last");
+last_img.after(last_img.pre().prev().prev().prev().prev().clone());
+}
+});
+});
+</script>
+
+<script type="text/javascript" charset="utf-8">
+$(function() {
+		$(document).endlessScroll({
+bottomPixels: 500,
+fireDelay: 10,
+callback: function(i) {
+var last_img = $("table#images tr:last");
+last_img.after(last_img.pre().prev().prev().prev().prev().pre().prev().prev().prev().prev().clone());
+}
+});
+});
+</script>
+
+<script type="text/javascript" charset="utf-8">
+$(function() {
+		$(document).endlessScroll({
+bottomPixels: 500,
+fireDelay: 10,
+callback: function(i) {
+var last_img = $("table#images tr:last");
+last_img.after(last_img.pre().prev().prev().prev().prev().pre().prev().prev().prev().prev().pre().prev().prev().prev().prev().clone());
+}
+});
+});
+</script>
+
 </head>
 
 <body>
@@ -130,7 +170,7 @@ document.getElementById("preview").style.marginTop="0px";
 <div>
 <div class="headline">
 
-<img id="headline" src="images/Brand Assets/facebook_cover.png" alt="Valualize Graphic"/>
+<a href="index.html"><img id="headline" src="images/Brand Assets/facebook_cover.png" alt="Valualize Graphic"/></a>
 <h2>Valualize Graphic</h2>
 
 </div>
