try to add continuous scrolling

--- a/templates/index-third.html
+++ b/templates/index-third.html
@@ -3,6 +3,15 @@
 </div>
 </div>
 
-</body>
+<script type="text/javascript">
 
-</html>
+function yHandler()
+{
+	var wrap = document.getElementById("images");
+	var contentHeight = window.pageYOffset || document.documentElement.scollTop;
+	var yOffset = window.pageYOffset; 
+	var y = yOffset + window.innerHeight;
+	
+	if(y >= contentHeight)
+	{
+		wrap.innerHTML += 
