--- a/templates/head.html
+++ b/templates/head.html
@@ -9,6 +9,8 @@ Valualize Graphic
 
 <base href="http://labs.jt-inc.net/graphic/">
 
+<link rel="icon" type"image/ico" href="images/Brand Assets/Favicon.ico">
+
 <style type="text/css">
 
 body 
@@ -123,24 +125,9 @@ document.getElementById("preview").style.marginTop="0px";
 
 </script>
 
-<script type="text/javascript" src="js/jquery.endless-scroll.js"></script>
-<script type="text/javascript" charset="utf-8">
-
-$(function() {
-		$(document).endlessScroll({
-bottomPixels: 500,
-fireDelay: 10,
-callback: function(i) {
-var last_img = $("table#images tr:last");
-last_img.after(last_img.pre().prev().prev().prev().prev().clone());
-}
-});
-});
-</script>
-
 </head>
 
-<body>
+<body onscroll="addBottom()">
 
 <div>
 <div class="headline">
