fix some bugs and add to change titles

--- a/templates/head.html
+++ b/templates/head.html
@@ -7,7 +7,7 @@
 Valualize Graphic
 </title>
 
-<base href="http://labs.jt-inc.net/graphic/">
+<base href="http://graphic.valualize.com/">
 
 <link rel="icon" type"image/ico" href="images/Brand Assets/Favicon.ico">
 
