--- a/templates/index-third.html
+++ b/templates/index-third.html
@@ -1,5 +1,5 @@
 
-<iframe id="facebook" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Flabs.jt-inc.net%2Fgraphic%2Findex.html&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="float:right; margin:0% 1% 5% 0%; border:none; overflow:hidden; width:10%; height:21px;" allowTransparency="true"></iframe>
+<iframe id="facebook" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgraphic.valualize.com&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="float:right; margin:0% 1% 5% 0%; border:none; overflow:hidden; width:10%; height:21px;" allowTransparency="true"></iframe>
 
 </div>
 </div>
