add google button

--- a/templates/index-third.html
+++ b/templates/index-third.html
@@ -1,5 +1,23 @@
 
-<iframe id="facebook" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgraphic.valualize.com&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="float:right; margin:0% 1% 5% 0%; border:none; overflow:hidden; width:10%; height:21px;" allowTransparency="true"></iframe>
+<div align="right">
+<iframe id="facebook" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgraphic.valualize.com&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="float:right; margin:0% 1% 5% 1%; border:none; overflow:hidden; width:10%; height:21px;" allowTransparency="true"></iframe>
+
+<div class="g-plusone" data-size="medium" data-align="right"></div>
+<div class="g-plus" data-action="share" data-annotation="bubble" data-align="right"></div>
+<!--
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://graphic.valualize.com" style="margin:0% 0% 0% 0%">Tweet</a>
+-->
+</div>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+<script type="text/javascript">
+(function() {
+ var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+ po.src = 'https://apis.google.com/js/platform.js';
+ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+ })();
+</script>
 
 </div>
 </div>
