--- a/templates/image-second.html
+++ b/templates/image-second.html
@@ -1,6 +1,19 @@
  alt="No Image Loaded"/ onclick="clickImage()">
 
-<iframe id="facebook" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgraphic.valualize.com&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="float:right; margin:0% 0% 5% 0%; border:none; overflow:hidden; width:10%; height:21px;" allowTransparency="true"></iframe>
+<iframe id="facebook" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgraphic.valualize.com&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="float:right; margin:0% 0% 5% 1%; border:none; overflow:hidden; width:10%; height:21px;" allowTransparency="true"></iframe>
+
+<div align="right">
+<div class="g-plusone" data-align="right" data-size="medium"></div>
+<div class="g-plus" data-align="right" data-action="share" data-annotation="bubble"></div>
+</div>
+
+<script type="text/javascript">
+(function() {
+ var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+ po.src = 'https://apis.google.com/js/platform.js';
+ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+ })();
+</script>
 
 <script>
 
