almost not changed

--- a/templates/head.html
+++ b/templates/head.html
@@ -267,6 +267,8 @@ document.getElementById("preview").style.marginTop="0px";
  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 ga('create', 'UA-53655679-1', 'auto');
+ga('require', 'linkid', 'linkid.js');
+ga('require', 'displayfeatures');
 ga('send', 'pageview');
 
 </script>
@@ -289,6 +291,7 @@ ga('send', 'pageview');
 <div class="copyright">
 
 <p id="copyright"><small><b>Copyright &copy; 2014 Valualize Graphic</a></b></small></p>
+
 
 </div>
 
